--- a/lab-dw-aggregating.ipynb
+++ b/lab-dw-aggregating.ipynb
@@ -127,13 +127,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "449513f4-0459-46a0-a18d-9398d974c9ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\duygu\\AppData\\Local\\Temp\\ipykernel_13744\\1453364836.py:15: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  file3['Effective To Date'] = pd.to_datetime(file3['Effective To Date'], errors='coerce')\n",
+      "C:\\Users\\duygu\\AppData\\Local\\Temp\\ipykernel_13744\\1453364836.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  file3['month'] = file3['Effective To Date'].dt.month_name()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Response</th>\n",
+       "      <th>Sales Channel</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Branch</td>\n",
+       "      <td>Unnamed: 0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Call Center</td>\n",
+       "      <td>Unnamed: 0</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Call Center</td>\n",
+       "      <td>Unnamed: 0</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Agent</td>\n",
+       "      <td>Unnamed: 0</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Agent</td>\n",
+       "      <td>Unnamed: 0</td>\n",
+       "      <td>113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113537</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Agent</td>\n",
+       "      <td>month</td>\n",
+       "      <td>January</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113539</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Agent</td>\n",
+       "      <td>month</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113544</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Agent</td>\n",
+       "      <td>month</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113563</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Agent</td>\n",
+       "      <td>month</td>\n",
+       "      <td>February</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113568</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Agent</td>\n",
+       "      <td>month</td>\n",
+       "      <td>January</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16025 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Response Sales Channel    variable     value\n",
+       "1           Yes        Branch  Unnamed: 0         3\n",
+       "7           Yes   Call Center  Unnamed: 0        19\n",
+       "31          Yes   Call Center  Unnamed: 0        69\n",
+       "41          Yes         Agent  Unnamed: 0       102\n",
+       "45          Yes         Agent  Unnamed: 0       113\n",
+       "...         ...           ...         ...       ...\n",
+       "113537      Yes         Agent       month   January\n",
+       "113539      Yes         Agent       month  February\n",
+       "113544      Yes         Agent       month  February\n",
+       "113563      Yes         Agent       month  February\n",
+       "113568      Yes         Agent       month   January\n",
+       "\n",
+       "[16025 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "file = pd.read_csv('https://raw.githubusercontent.com/data-bootcamp-v4/data/main/marketing_customer_analysis.csv')\n",
+    "\n",
+    "display(file)\n",
+    "\n",
+    "file2 = file.copy()\n",
+    "file3 = file2.dropna()\n",
+    "\n",
+    "display(file3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "file3['Effective To Date'] = pd.to_datetime(file3['Effective To Date'], errors='coerce')\n",
+    "file3.dtypes\n",
+    "\n",
+    "file3['month'] = file3['Effective To Date'].dt.month_name()\n",
+    "file3['month']\n",
+    "\n",
+    "display(file3)\n",
+    "file3.columns\n",
+    "\n",
+    "\n",
+    "file4 = file3[(file3['Total Claim Amount'] > 1000) & (file3['Response'] == \"Yes\") ]\n",
+    "file4\n",
+    "\n",
+    "file5=file3[ file3['Response'] == \"Yes\" ]\n",
+    "file5\n",
+    "summary_table2 = file5.pivot_table(values='Total Claim Amount', index=['Gender','Policy Type'], aggfunc='mean')\n",
+    "display(summary_table2)\n",
+    "\n",
+    "file6 = file3['State'].value_counts()>500\n",
+    "file6\n",
+    "\n",
+    "summary_table3 = file3.pivot_table(values='Customer Lifetime Value', index=['Gender','Education'], aggfunc='median')\n",
+    "display(summary_table3)\n",
+    "        \n",
+    "summary_table4 = file3.pivot_table(values='Number of Open Complaints', index=['State','Policy Type'], aggfunc=['min','max','mean'])\n",
+    "display(summary_table4)\n",
+    "\n",
+    "summary_table5 = file3.pivot_table(values='Policy', index=['State','month'],aggfunc='count')\n",
+    "summary_table5\n",
+    "\n",
+    "summary_table6 = file3.pivot_table(values='Number of Policies', index=['State','month'])\n",
+    "top_states = summary_table6.groupby('State')['Number of Policies'].sum().nlargest(3).index\n",
+    "display(top_states)\n",
+    "\n",
+    "verticalized = pd.melt(file3,id_vars=['Response','Sales Channel'])\n",
+    "verticalized_yes =verticalized[(verticalized['Response'] == \"Yes\")] \n",
+    "verticalized_yes\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7260090c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -152,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
